<resources>
    <string name="app_name" translatable="false">NewsApp</string>
    <string name="banner_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="notification_work_id" translatable="false">my_id</string>
    <string name="default_email" translatable="false">abc@gmail.com</string>
    <string name="sample_news_source" translatable="false">news.mydrivers.com</string>
    <string name="sample_time" translatable="false">12:32</string>
    <string name="sample_date" translatable="false">27-05-2024</string>
    <string name="sample_news_title" translatable="false">Memorial Day 2024 tech deals you can still get this weekend..</string>
    <string name="sample_news_description" translatable="false">İmza töreninde açıklamalarda bulunan Jose Mourinho, isminin Fenerbahçe\'yle anılmaya başladığı andan itibaren taraftarların sevgisini derinden hissettiğini belirterek, "Normalde bir teknik adam elde ettiği zaferden sonra bu sevgiyi görür. Ama bunun öncesinde bunu hissedebiliyorum. Bu da bana büyük bir sorumluluk veriyor. Sizlere söz veriyorum ki şu andan itibaren ben de sizin ailenize aitim. Bu forma tıpkı benim derim, kemiğim gibi olacak. Futbol sizler, bizler için bir tutkudur. Öyle zannediyorum ki bu tutkuyu hissedebileceğim en iyi yerlerden birisindeyim." ifadelerini kullandı..</string>
    <string name="point" translatable="false">●</string>
    <string name="channel_name" translatable="false">Channel Name</string>
    <string name="channel_description" translatable="false">Channel Description</string>
    <string name="sample_categories" translatable="false">General, Sport, Entertainment, Science</string>
    <string name="language_gb" translatable="false">🇬🇧</string>
    <string name="language_tr" translatable="false">🇹🇷</string>
    <string name="spinner_gb" translatable="false">🇬🇧 | GB</string>
    <string name="spinner_tr" translatable="false">🇹🇷 | TR</string>
    <string name="spinner_fr" translatable="false">🇫🇷 | FR</string>
    <string name="spinner_es" translatable="false">🇪🇸 | ES</string>
    <string name="spinner_it" translatable="false">🇮🇹 | IT</string>
    <string name="spinner_de" translatable="false">🇩🇪 | DE</string>
    <string name="spinner_ar" translatable="false">🇸🇦 | SA</string>
    <string name="spinner_pt" translatable="false">🇵🇹 | PT</string>
    <string name="spinner_nl" translatable="false">🇳🇱 | NL</string>
    <string name="spinner_ru" translatable="false">🇷🇺 | RU</string>
    <string name="spinner_kr" translatable="false">🇰🇷 | KO</string>
    <string name="spinner_bg" translatable="false">🇧🇬 | BG</string>
    <string name="spinner_zh" translatable="false">🇨🇳 | CN</string>
    <string name="spinner_jp" translatable="false">🇯🇵 | JP</string>
    <string name="spinner_gr" translatable="false">🇬🇷 | GR</string>
    <string name="spinner_ro" translatable="false">🇷🇴 | RO</string>
    <string name="spinner_uk" translatable="false">🇺🇦 | UK</string>
    <string name="spinner_in" translatable="false">🇮🇳 | IN</string>
    <string name="spinner_id" translatable="false">🇮🇩 | ID</string>
    <string name="login_title_text">Hello,\nWelcome to \nthe News\nWorld!</string>
    <string name="email_hint_text">Email address</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="login_forgot_password_text">Forgot Password ?</string>
    <string name="login_text">Login</string>
    <string name="or_continue_with_text">Or Continue With</string>
    <string name="have_account_text">Don\'t have an account ?</string>
    <string name="already_account_text">Already have an account ?</string>
    <string name="signup_text">Sign Up</string>
    <string name="signup_title_text">Join Our\nNews World,\nEnjoy the\nRead!</string>
    <string name="reset_password_title_text">Reset Password</string>
    <string name="reset_email_info">A reset link has been sent to your email address.</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="password_not_match_message">Please make sure your passwords match</string>
    <string name="password_over_limit_message">You can\'t create a password with more than 12 characters.</string>
    <string name="email_un_correct_message">E-mail address could not be found.</string>
    <string name="enter_email_message">Enter your email address</string>
    <string name="enter_password_message">Enter your password</string>
    <string name="enter_confirm_password_message">Confirm your password</string>
    <string name="reset_email_success">A reset link has been sent to your email address.</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_readlist">Read List</string>
    <string name="navigation_settings">Settings</string>
    <string name="home_logout">Logout</string>
    <string name="home_headline">Headline</string>
    <string name="tab_general">General</string>
    <string name="tab_politics">Politic</string>
    <string name="tab_sport">Sport</string>
    <string name="tab_economy">Business</string>
    <string name="tab_tech">Tech</string>
    <string name="tab_entertainment">Entertainment</string>
    <string name="tab_science">Science</string>
    <string name="tab_local">Local</string>
    <string name="tab_cloud">Cloud</string>
    <string name="see_all">See All</string>
    <string name="search_hint">Search</string>
    <string name="notification_title">Hey!</string>
    <string name="notification_content">How about checking out today\'s news? 📰</string>
    <string name="search_message">Hey! Is there a news that interests you?\nSearch and discover now! 📰</string>
    <string name="search_not_found">Sorry, we couldn\'t find any results 😔</string>
    <string name="home_not_found">Sorry, we couldn\'t find any news 😔</string>
    <string name="network_error">Check your network connection 🌐</string>
    <string name="readlist_message">Your Read List is empty.</string>
    <string name="detail_title">News Detail</string>
    <string name="detail_similar">Similar News 📰</string>
    <string name="detail_see_more">see more</string>
    <string name="readlist_title">Read List</string>
    <string name="logout_alert">Are you sure want to log out?</string>
    <string name="delete_account_alert">Are you sure want to delete this account?</string>
    <string name="readlist_alert">Are you sure you want to delete all read list news?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fetch_readlist_cloud">News fetched from Firestore.</string>
    <string name="fetch_readlist_local">News fetched from SQLite.</string>
    <string name="deleted">1 News deleted from Read List</string>
    <string name="all_deleted">All news items have been deleted from the Read List.</string>
    <string name="saved">1 News saved to Read List</string>
    <string name="fetch_from_api">The news details were retrieved from the API.</string>
    <string name="fetch_from_sqlite">The news details were retrieved from the SQLite.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_account">Account</string>
    <string name="settings_extra">Extra</string>
    <string name="settings_item_notification">Notifications</string>
    <string name="settings_item_language">Language</string>
    <string name="settings_item_theme">Dark Theme</string>
    <string name="settings_item_change_password">Change Password</string>
    <string name="settings_item_delete_account">Delete Account</string>
    <string name="settings_item_logout">Log Out</string>
    <string name="settings_item_about_me">About Me</string>
    <string name="settings_item_send_message">Send a Message</string>
    <string name="settings_item_share_app">Share this App</string>
    <string name="spinner_english">English</string>
    <string name="spinner_turkish">Turkish</string>
    <string name="read_external_storage_permission">Your permission is required to access the gallery</string>
    <string name="allow">Allow</string>
    <string name="change_profile_title_text">Profile Photo</string>
    <string name="remove_photo">Remove</string>
    <string name="gallery_photo">Gallery</string>
    <string name="bad_request_message">Bad Request: The server could not understand the request due to invalid syntax.</string>
    <string name="unauthorized_message">Unauthorized: The client must authenticate itself to get the requested response.</string>
    <string name="forbidden_message">Forbidden: The client does not have access rights to the content.</string>
    <string name="not_found_message">Not Found: The server could not find the requested resource.</string>
    <string name="internal_server_message">Internal Server Error: The server has encountered a situation it doesn\'t know how to handle.</string>
    <string name="bad_gateway_message">Bad Gateway: The server was acting as a gateway or proxy and received an invalid response.</string>
    <string name="service_unavailable_message">Service Unavailable: The server is not ready to handle the request.</string>
    <string name="gateway_timeout_message">Gateway Timeout: The server is acting as a gateway and cannot get a response in time.</string>
    <string name="unknown_error_message">Unknown Error: An unexpected error occurred.</string>
    <string name="check_connect">Check connection</string>
    <string name="no_connection">No connection</string>
</resources>