<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_spacing_size"
        android:layout_marginTop="@dimen/large_spacing_size"
        android:layout_marginEnd="@dimen/medium_spacing_size"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/logout_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogPositiveButton"
        style="@style/mediumWideFillButtonStyle"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginTop="@dimen/large_spacing_size"
        android:layout_marginStart="@dimen/large_spacing_size"
        android:layout_marginBottom="@dimen/large_spacing_size"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitleText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogNegativeButton"
        style="@style/mediumWideStrokeButtonStyle"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginTop="@dimen/large_spacing_size"
        android:layout_marginEnd="@dimen/large_spacing_size"
        android:layout_marginBottom="@dimen/large_spacing_size"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitleText" />

</androidx.constraintlayout.widget.ConstraintLayout>