<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginPoster"
            style="@style/hugeImageViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/loginGradientOverlay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gradient_height_size"
            android:layout_marginTop="@dimen/negative_large_spacing_size"
            android:background="@drawable/gradient_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPoster" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loginTitleText"
        style="@style/largeBoldPrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        android:text="@string/login_title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailInputLayout"
        style="@style/textInputLayoutStyle"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/extra_small_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitleText"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailEditText"
            style="@style/textInputEditTextStyle"
            android:hint="@string/email_hint_text"
            android:inputType="textWebEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordInputLayout"
        style="@style/textInputLayoutStyle"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/tiny_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmailInputLayout"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            style="@style/textInputEditTextStyle"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallNormalTextStyle"
        android:layout_marginTop="@dimen/extra_tiny_spacing_size"
        android:text="@string/login_forgot_password_text"
        app:layout_constraintEnd_toEndOf="@id/loginPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordInputLayout" />

    <Button
        android:id="@+id/loginButton"
        style="@style/largeButtonStyle"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/extra_small_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText" />

    <TextView
        android:id="@+id/orContinueWithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallNormalTextStyle"
        android:layout_marginTop="@dimen/extra_small_spacing_size"
        android:text="@string/or_continue_with_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <View
        android:id="@+id/loginDividerOne"
        style="@style/smallDividerStyle"
        app:layout_constraintBottom_toBottomOf="@id/orContinueWithText"
        app:layout_constraintEnd_toStartOf="@id/orContinueWithText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orContinueWithText" />

    <View
        android:id="@+id/loginDividerTwo"
        style="@style/smallDividerStyle"
        app:layout_constraintBottom_toBottomOf="@id/orContinueWithText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/orContinueWithText"
        app:layout_constraintTop_toTopOf="@id/orContinueWithText" />

    <ImageButton
        android:id="@+id/googleButton"
        style="@style/smallCircularPrimaryButtonStyle"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/extra_small_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orContinueWithText" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        style="@style/smallNormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/extra_small_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        android:layout_marginBottom="@dimen/extra_small_spacing_size"
        android:text="@string/have_account_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleButton"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/signupText"
        style="@style/smallBoldPrimaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_spacing_size"
        android:text="@string/signup_text"
        app:layout_constraintBottom_toBottomOf="@id/dontHaveAccountText"
        app:layout_constraintStart_toEndOf="@id/dontHaveAccountText"
        app:layout_constraintTop_toTopOf="@id/dontHaveAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>