<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet_background">

    <ImageView
        android:id="@+id/resetPasswordSwipeIcon"
        style="@style/swipeIconStyle"
        android:layout_marginTop="@dimen/tiny_spacing_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallBoldSecondaryTextStyle"
        android:layout_marginTop="@dimen/tiny_spacing_size"
        android:text="@string/reset_password_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordSwipeIcon" />

    <View
        android:id="@+id/resetDivider"
        style="@style/largeDividerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordTitleText" />

    <TextView
        android:id="@+id/resetInfoText"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallNormalTextStyle"
        android:layout_marginTop="@dimen/medium_spacing_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetDivider"
        android:text="@string/enter_email_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetEmailInputLayout"
        style="@style/textInputLayoutStyle"
        android:layout_marginStart="@dimen/small_spacing_size"
        android:layout_marginTop="@dimen/medium_spacing_size"
        android:layout_marginEnd="@dimen/small_spacing_size"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetInfoText"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetEmailEditText"
            style="@style/textInputEditTextStyle"
            android:hint="@string/email_hint_text"
            android:inputType="textWebEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/passwordLoadingBar"
        android:visibility="gone"
        style="@style/loadingBarStyle"
        android:layout_marginTop="@dimen/medium_spacing_size"
        android:layout_marginBottom="@dimen/medium_spacing_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetEmailInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetSendButton"
        style="@style/mediumWideFillButtonStyle"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginTop="@dimen/medium_spacing_size"
        android:layout_marginBottom="@dimen/medium_spacing_size"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetEmailInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBackButton"
        style="@style/mediumWideStrokeButtonStyle"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginTop="@dimen/medium_spacing_size"
        android:layout_marginBottom="@dimen/medium_spacing_size"
        android:text="@string/back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetEmailInputLayout"
         />

</androidx.constraintlayout.widget.ConstraintLayout>